// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render WordSummary correctly with 1 word 1`] = `
<div>
  <h2>
    Viewing 
    1 word
     with 
    1 word
     due.
  </h2>
</div>
`;

exports[`should render WordSummary correctly with multiple words 1`] = `
<div>
  <h2>
    Viewing 
    4 words
     with 
    2 words
     due.
  </h2>
</div>
`;
